--- a/css/style.css
+++ b/css/style.css
@@ -56,12 +56,13 @@ hr {
 /* ======= filters ======= */
 .banner {
     height: 40px;
-    padding: 0 20px;
+    padding: 0 20px 0 0;
     border: solid 2px #eee;
 }
 #filters-title {
-    width: 50%;
+    width: 60%;
     float: left;
+    background-color: darkslateblue;
 }
 #filters-title > h2 {
     display: block;
@@ -70,7 +71,7 @@ hr {
     font-size: 16px;
     font-style: italic;
     text-align: right;
-    color: #eee;
+    color: gray;
 }
 #filters-title > h2.filterList {
     display: block;
@@ -78,7 +79,7 @@ hr {
     width: 100%;
     font-size: 16px;
     text-align: right;
-    color: darkslateblue;
+    color: white;
 }
 .filterLabel {
     font-style: normal;
@@ -97,31 +98,22 @@ hr {
     background-color: darkviolet;
     border: solid 2px darkslateblue;
 }
-#clear-button {
-    position: absolute;
-    display: block;
-    height: 38px;
-    width: 60px;
-    left: 54%;
-    margin-left: 20px;
-    box-shadow: 4px 4px 4px #555;
-    border-radius: 6px 6px 6px 6px;
-    background-color: darkviolet;
-    border: solid 2px darkslateblue;
-}
-.btn-text {
-    line-height: 38px;
-    margin-left: 11px;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: center;
-    color: white;
-}
-#clear-button:hover {
-    background-color: mediumpurple ;
-}
 #zone-school-button:hover {
     background-color: mediumpurple ;
+}
+#close-X {
+    position: relative;
+    display: inline-block;
+    float: left;
+    height: 14px;
+    width: 14px;
+    margin-top: 2px;
+    margin-left: 10px;
+    line-height: 12px;
+    font-size: 12;
+    color: purple;
+    background-color: white;
+    border: solid 2px black;
 }
 
 /* ======= mapCol ======= */
@@ -134,22 +126,23 @@ hr {
     display: flex;
     flex-direction: -webkit-column;
     flex-direction: column;
-    justify-content: -webkit-center;
-    justify-content: center;
-    align-items: -webkit-center;
-    align-items: center;
+    justify-content: -webkit-flex-start;
+    justify-content: flex-start;;
+    align-items: -webkit-flex-start;
+    align-items: flex-start;
 }
 
 /* ======= map ======= */
-#map {
-    width: 100%;
+#toolMap-container {
+    width: 80%;
+    left: 0;
     height: 600px;
 }
-#map2 {
-    float: left;
+#storyMap-container {
+    position: absolute;
     width: 300px;
     height: 300px;
-    margin-top: 60px;
+    top: 120px;
 }
 
 /* ======= filter window ======= */
@@ -162,7 +155,7 @@ hr {
     background-color: #fff2e5;
     box-shadow: 4px 4px 4px #555;
     border-radius: 6px 6px 2px 2px;
-    z-index:999;
+    z-index:99;
 }
 .title_bar {
     width: 100%;
@@ -176,11 +169,38 @@ hr {
     cursor:move;
 }
 .title_bar > p {
+    display: inline-block;
     margin-top: 8px;
     font-weight: 700;
 	font-size: 16px;
     color: white;
 }
+#clear-button {
+    /*position: relative;*/
+    display: inline-block;
+    height: 22px;
+    width: 70px;
+    left: 90%;
+    margin-left: 60px;
+    border-radius: 2px 2px 2px 2px;
+    background-color: darkviolet;
+    border: solid 2px black;
+    z-index: 99999;
+}
+.btn-text {
+    line-height: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+}
+#clear-button:hover {
+    background-color: orchid ;
+}
+#clear-button:hover > span {
+    /*color: purple;*/
+}
+
 
 /* ======= navbar ======= */
 .labelText {
@@ -191,11 +211,6 @@ hr {
     text-align: right;
     color: red;
 }
-/*.all-filters {
-    display: inline-block;;
-    margin-left: 20px;
-    color: red;
-}*/
 #main-nav {
     width: 100%;
     float: left;
@@ -364,39 +379,192 @@ hr {
     color: purple;
 }
 
-/* ======= mouseover ======= */
-/*#mouseover-text {
+/* ======= profile-container ======= */
+#profile-container {
+    display: none;
+    height: auto;
     position: absolute;
-    top: 460px;
-    left: 73%;
-    width: 20%;
-    height: 36px;
-    background-color: white;
-    box-shadow: 4px 4px 4px #555;
-    border-radius: 6px 6px 2px 2px;
-    z-index: 999;
-}*/
-
-/* ======= legend ======= */
-/*#chart {
-    display:none;
-    width:360px;
-    height:360px;
-    position:absolute;
-    top:300px;
-    left:60%;
+    top: 42%;
+    left: 65%;
+    width: 360px;
+    margin-top: 20px;
+    border-collapse: collapse;
+    border-spacing: 0;
     box-shadow: 6px 6px 5px #888888;
     border-radius: 6px 6px 2px 2px;
     background-color: rgba(255, 255, 255, 0.9);
-    z-index:99;
-}*/
+    z-index: 9;
+}
+#profile-container > tbody, tr {
+    width: 100%;
+    padding: -10px 0;
+    margin: -10px 0;
+}
+#profile-container > tr:nth-child(even) {
+    background-color: #f2f2f2
+}
+.profile-banner {
+    width: 100%;
+    height: 18px;
+    text-align: center;
+    color: white;
+    background-color: firebrick;
+}
+.profile-banner > p {
+    color: white;
+}
+.profile-title {
+    padding: 1px 0;
+    margin: 1px 10px;
+    font-size: 14px;
+    color: white;
+}
+.profile-subtitle {
+    padding: 1px 0;
+    margin: 1px 10px;
+    font-size: 12px;
+    color: white;
+}
+.data-key, .data-value {
+    position: relative;
+    padding: -10px 0;
+    margin: -10px 0;
+    height: 14px;
+    vertical-align: center;
+    border-bottom: 1px solid #ddd;
+}
+.data-key {
+    width: 140px;
+}
+.data-value {
+    width: 220px;
+}
+.key-text, .value-text {
+    position: relative;
+    padding: 1px 0;
+    margin: 1px 10px;
+    height: 100%;
+    font-weight: 400;
+	font-size: 14px;
+}
+.key-text {
+    text-align: right;
+    color: black;
+}
+.value-text {
+    text-align: left;
+    color: purple;
+}
+.value-label {
+    color: black;
+}
+
+/* ======= chart ======= */
+#chart-container {
+    display: none;
+    height: auto;
+    position: absolute;
+    top: 42%;
+    left: 65%;
+    width: 360px;
+    margin-top: 20px;
+    padding: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
+    z-index: 9;
+}
+#chart {
+    position: relative;
+    width: 100%;
+    height: auto;
+    left: 0;
+    box-shadow: 6px 6px 5px #888888;
+    border-radius: 6px 6px 2px 2px;
+    background-color: rgba(255, 255, 255, 0.9);
+}
+.title-container {
+    float: left;
+    width: 65%;
+}
+#chart-title {
+    padding: 1px 0;
+    margin: 1px 10px;
+    font-size: 16px;
+    color: white;
+}
+#chart-subtitle {
+    padding: 1px 0;
+    margin: 1px 10px;
+    font-size: 12px;
+    color: white;
+}
+.submenu-default {
+    margin: 0;
+    padding: 0;
+    line-height: 12px;
+    font-size: 12;
+    color: red;
+    background-color: white;
+}
+#sub-nav-container {
+    position: relative;
+    display: inline-block;
+    float: left;
+    height: 30px;
+    width: 100px;
+    margin-top: 2px;
+    margin-left: 5px;
+    line-height: 16px;
+    font-size: 12;
+    background-color: white;
+    border: solid 2px black;
+}
+#sub-nav-container > .sub-nav-list {
+    display: none;
+	list-style: none;
+	position: relative;
+    width: 100%;
+    height: 95%;
+	margin: 0;
+	padding: 0;
+    z-index: 999;
+}
+#sub-nav-container > .sub-nav-list li {
+    position: relative;
+    width: 100%;
+    height: 90%;
+	margin: 2px 0;
+    background-color: gray;
+}
+#sub-nav-container > .sub-nav-list a {
+    display: inline-block;;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 5px 0;
+    text-align: center;
+	text-decoration: none;
+	font-weight: 400;
+	font-size: 14px;
+    color: purple;
+	font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+#sub-nav-container:hover > .sub-nav-list {
+    display: block;
+}
+#sub-nav-container > .sub-nav-list > li:hover > a {
+    color: red;
+	background-color: #ffd9b3;
+}
+
 
 /* ======= mapLegend ======= */
 #legend-container {
     display: none;
-    position: relative;
-    margin-top: 10px;
-    left: 50%;
+    height: auto;
+    position: absolute;
+    top: 42%;
+    left: 65%;
     width: 50%;
     height: auto;
     border-collapse: collapse;
@@ -444,99 +612,37 @@ hr {
     height: 15px;
 }
 
-/* ======= chart ======= */
-#chart-container {
-    display: none;
-    height: auto;
-    position: absolute;
-    top: 40%;
-    left: 65%;
-    width: 360px;
-    margin-top: 20px;
-    border-collapse: collapse;
-    border-spacing: 0;
-    z-index: 9;
+/* ======= d3 ======= */
+.axis path,
+.axis line {
+    fill: none;
+    stroke: black;
+    shape-rendering: crispEdges;
 }
-#chart {
-    position: relative;
-    width: 70%;
-    height: auto;
-    left: 30%;
-    box-shadow: 6px 6px 5px #888888;
-    border-radius: 6px 6px 2px 2px;
-    background-color: rgba(255, 255, 255, 0.9);
+.axis text {
+    font-family: sans-serif;
+    font-size: 11px;
 }
 
-/* ======= profile-container ======= */
-#profile-container {
-    display: none;
-    height: auto;
-    position: absolute;
-    top: 40%;
-    left: 65%;
-    width: 360px;
-    margin-top: 20px;
-    border-collapse: collapse;
-    border-spacing: 0;
-    box-shadow: 6px 6px 5px #888888;
-    border-radius: 6px 6px 2px 2px;
-    background-color: rgba(255, 255, 255, 0.9);
-    z-index: 9;
+/* ======= jquery selectmenu ======= */
+fieldset {
+    border: 0;
 }
-#profile-container > tbody, tr {
-    width: 100%;
-    padding: -10px 0;
-    margin: -10px 0;
+label {
+    display: block;
+    margin: 30px 0 0 0;
 }
-#profile-container > tr:nth-child(even) {
-    background-color: #f2f2f2
-}
-.data-key, .data-value {
-    position: relative;
-    padding: -10px 0;
-    margin: -10px 0;
-    height: 10px;
-    vertical-align: center;
-    border-bottom: 1px solid #ddd;
-}
-.data-key {
+#expendMath {
     width: 100px;
+    height: 30px;
+    margin-top: 10px;
 }
-.data-value {
-    width: 260px;
-}
-.key-text {
-    position: relative;
-    margin-left: 0 0 0 10px;;
-    padding: 1px 0;
-    margin: 1px 10px;
-    text-align: right;
-    font-weight: 400;
-	font-size: 14px;
-    color: black;
-}
-.value-text {
-    padding: 1px 0;
-    margin: 1px 10px;
-    font-size: 14px;
-    color: purple;
-}
-.schoolname {
-    width: 100%;
-    height: 18px;
-    text-align: center;
-    color: white;
-    background-color: firebrick;
-}
-#expend-text {
-    line-height: 18px;
-}
-.schoolname > p {
-    color: white;
+.overflow {
+    height: 100px;
 }
 
 /* ======= tooltips ======= */
-#tooltips {
+/*#tooltips {
     position: absolute;
     height: 24px;
     background-color: rgba(255, 255, 255, 1);
@@ -549,25 +655,48 @@ hr {
     line-height: 12px;
     font-size: 12px;
     font-weight: bold;
-}
+}*/
 
-/* ======= data ======= */
-.schoolTitle {
-    height: 60px;
+/* ======= page nav ======= */
+/*#page-nav {
+    width: 100%;
+    float: left;
 }
+#page-nav > .nav-list {
+    display: block;
+	list-style: none;
+	position: relative;
+    width: 100%;
+	margin: 0;
+	padding: 0;
+    z-index: 999;
+}
+#page-nav > .nav-list li {
+	position: relative;
+    float: left;
+    width: 120px;
+    height: 36px;
+	margin: 0;
+	padding: 0;
+    color: white;
+    background: #ddd9b3;
+}
+#page-nav > .nav-list a {
+    display: inline-block;;
+    width: 100%;
+    margin: 0;
+	padding-top: 8px;
+    text-align: center;
+	text-decoration: none;
+	font-weight: 700;
+	font-size: 14px;
+    color: #333;
+	font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+#page-nav > .nav-list li:hover {
+	background:#ffd9b3;
+}*/
 
-/* ======= d3 ======= */
-.axis path,
-.axis line {
-    fill: none;
-    stroke: black;
-    shape-rendering: crispEdges;
-}
-
-.axis text {
-    font-family: sans-serif;
-    font-size: 11px;
-}
 
 /* ======= rankLegend ======= */
 /*#rankLegend {
@@ -625,4 +754,31 @@ hr {
     width: 10px;
     height: 60px;
     background-color: red;
+}*/
+
+/* ======= mouseover ======= */
+/*#mouseover-text {
+    position: absolute;
+    top: 460px;
+    left: 73%;
+    width: 20%;
+    height: 36px;
+    background-color: white;
+    box-shadow: 4px 4px 4px #555;
+    border-radius: 6px 6px 2px 2px;
+    z-index: 999;
+}*/
+
+/* ======= legend ======= */
+/*#chart {
+    display:none;
+    width:360px;
+    height:360px;
+    position:absolute;
+    top:300px;
+    left:60%;
+    box-shadow: 6px 6px 5px #888888;
+    border-radius: 6px 6px 2px 2px;
+    background-color: rgba(255, 255, 255, 0.9);
+    z-index:99;
 }*/
